# doctorGit-

./: AGENTS.md  LICENSE  README.md  docker-compose.yml  metadata.json  package-lock.json  package.json  server.ts
scripts/: workspace_builder.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/adalat_runtime/: goal_ledger.rs  layer_judge.rs  local_sandbox.rs  mod.rs
src-tauri/src/awakening_matrix/: lora_swapper.rs  mmap_linker.rs  mod.rs  vector_store.rs
src-tauri/src/guardrails/: circuit_breaker.rs  mod.rs  secure_keychain.rs
src-tauri/src/pty_subsystem/: io_worker.rs  mod.rs  osc_handlers.rs  shell_fork.rs
src/components/appbase/: AppBaseDashboard.tsx
src/components/browser/: LocalBrowser.tsx
src/components/canvas/: CanvasGrid.tsx  CustomNode.tsx  LayerToggleMatrix.tsx  NodeConnector.tsx
src/components/copilot/: CopilotSidebar.tsx
src/components/dashboard/: EngineDashboard.tsx
src/components/editor/: CodeMirrorBridge.tsx  LivePreviewView.tsx  SplitPaneSynchronizer.tsx
src/components/explorer/: FileExplorer.tsx
src/components/settings/: AISettingsModal.tsx
src/components/terminal/: AdalatMatrixView.tsx  TabMultiplexer.tsx  VectorStoreView.tsx  XtermCanvas.tsx
src/engine/: AgentEngine.ts
src/hooks/: useAdalatStream.ts  useVibeCode.ts
