[package]
name = "workspace-kernel"
version = "0.1.0"
description = "Native Core Kernel Layer for AI Canvas Workspace"
authors = ["AI Studio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
portable-pty = "0.8"
keyring = "2.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
